[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
enum_dispatch = "0.3.13"
futures-util = "0.3.32"
rust_decimal = "1.41.0"
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json =  { version = "1.0.149"}
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }

[profile.release]
# lto = true
# codegen-units = 1
